// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItemBase snapshot should match snapshot 1`] = `
<ListItemBase>
  <li
    className="md-list-item-base-wrapper"
    data-disabled={false}
    data-shape="rectangle"
    data-size={40}
    role="listitem"
  >
    Test
  </li>
</ListItemBase>
`;

exports[`ListItemBase snapshot should match snapshot with className 1`] = `
<ListItemBase
  className="example-class"
>
  <li
    className="example-class md-list-item-base-wrapper"
    data-disabled={false}
    data-shape="rectangle"
    data-size={40}
    role="listitem"
  >
    Test
  </li>
</ListItemBase>
`;

exports[`ListItemBase snapshot should match snapshot with id 1`] = `
<ListItemBase
  id="example-id"
>
  <li
    className="md-list-item-base-wrapper"
    data-disabled={false}
    data-shape="rectangle"
    data-size={40}
    id="example-id"
    role="listitem"
  >
    Test
  </li>
</ListItemBase>
`;

exports[`ListItemBase snapshot should match snapshot with isDisabled 1`] = `
<ListItemBase
  isDisabled={true}
>
  <li
    className="md-list-item-base-wrapper"
    data-disabled={true}
    data-shape="rectangle"
    data-size={40}
    role="listitem"
  >
    Test
  </li>
</ListItemBase>
`;

exports[`ListItemBase snapshot should match snapshot with role 1`] = `
<ListItemBase
  role="role"
>
  <li
    className="md-list-item-base-wrapper"
    data-disabled={false}
    data-shape="rectangle"
    data-size={40}
    role="role"
  >
    Test
  </li>
</ListItemBase>
`;

exports[`ListItemBase snapshot should match snapshot with shape 1`] = `
<ListItemBase
  shape="rounded"
>
  <li
    className="md-list-item-base-wrapper"
    data-disabled={false}
    data-shape="rounded"
    data-size={40}
    role="listitem"
  >
    Test
  </li>
</ListItemBase>
`;

exports[`ListItemBase snapshot should match snapshot with size 1`] = `
<ListItemBase
  size={40}
>
  <li
    className="md-list-item-base-wrapper"
    data-disabled={false}
    data-shape="rectangle"
    data-size={40}
    role="listitem"
  >
    Test
  </li>
</ListItemBase>
`;

exports[`ListItemBase snapshot should match snapshot with style 1`] = `
<ListItemBase
  style={
    Object {
      "color": "pink",
    }
  }
>
  <li
    className="md-list-item-base-wrapper"
    data-disabled={false}
    data-shape="rectangle"
    data-size={40}
    role="listitem"
    style={
      Object {
        "color": "pink",
      }
    }
  >
    Test
  </li>
</ListItemBase>
`;
